diesel_compile_tests/tests/fail/pg_on_conflict_requires_valid_conflict_target.stderr
error[E0271]: type mismatch resolving `<posts::columns::id as Column>::Table == users::table`
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:38:10
    |
38  |         .on_conflict(posts::id);
    |          ^^^^^^^^^^^ expected struct `users::table`, found struct `posts::table`
    |
note: required by a bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> $DIESEL/src/upsert/on_conflict_extension.rs
    |
    |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`

error[E0277]: the trait bound `lower::lower<posts::columns::title>: Column` is not satisfied
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:42:10
    |
42  |         .on_conflict(lower(posts::title));
    |          ^^^^^^^^^^^ the trait `Column` is not implemented for `lower::lower<posts::columns::title>`
    |
    = help: the following other types implement trait `Column`:
              pg::metadata_lookup::pg_namespace::columns::nspname
              pg::metadata_lookup::pg_namespace::columns::oid
              pg::metadata_lookup::pg_type::columns::oid
              pg::metadata_lookup::pg_type::columns::typarray
              pg::metadata_lookup::pg_type::columns::typname
              pg::metadata_lookup::pg_type::columns::typnamespace
              posts::columns::id
              posts::columns::title
            and 2 others
    = note: required because of the requirements on the impl of `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<lower::lower<posts::columns::title>>`
note: required by a bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> $DIESEL/src/upsert/on_conflict_extension.rs
    |
    |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`

error[E0277]: the trait bound `&str: Column` is not satisfied
   --> tests/fail/pg_on_conflict_requires_valid_conflict_target.rs:46:10
    |
46  |         .on_conflict("id");
    |          ^^^^^^^^^^^ the trait `Column` is not implemented for `&str`
    |
    = help: the following other types implement trait `Column`:
              pg::metadata_lookup::pg_namespace::columns::nspname
              pg::metadata_lookup::pg_namespace::columns::oid
              pg::metadata_lookup::pg_type::columns::oid
              pg::metadata_lookup::pg_type::columns::typarray
              pg::metadata_lookup::pg_type::columns::typname
              pg::metadata_lookup::pg_type::columns::typnamespace
              posts::columns::id
              posts::columns::title
            and 2 others
    = note: required because of the requirements on the impl of `diesel::query_builder::upsert::on_conflict_target::OnConflictTarget<users::table>` for `diesel::query_builder::upsert::on_conflict_target::ConflictTarget<&str>`
note: required by a bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
   --> $DIESEL/src/upsert/on_conflict_extension.rs
    |
    |         ConflictTarget<Target>: OnConflictTarget<T>,
    |                                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `upsert::on_conflict_extension::<impl InsertStatement<T, U, Op, Ret>>::on_conflict`
